https://github.com/Sagar-Gondage/skillStore.git

--- a/style.css
+++ b/style.css
@@ -215,11 +215,11 @@ html {
 
 /* Middle Part start here */
 
-#navBar {
+/* #navBar {
     /* position: fixed; */
     /* width: 100%; */
     /* z-index: 100; */
-}
+/* } */ 
 
 .slider-box {
     width: 100%;
