index brand anniversary linking

--- a/brands/brand.css
+++ b/brands/brand.css
@@ -20,6 +20,7 @@
      border:1px solid black ;
      text-align: center;
      padding-top: 8px;
+     cursor: pointer;
  }
  #container :hover{
      background-color: rgb(26, 24, 24);
