--- a/brands/anniversary.css
+++ b/brands/anniversary.css
@@ -50,7 +50,10 @@
   gap:10px;
   padding:20px;
 }
-
+a{
+  text-decoration: none;
+  color:black;
+}
 .item{
   display:flex;
   flex-direction: column;
