--- a/brands/sale.css
+++ b/brands/sale.css
@@ -6,7 +6,10 @@
   font-family: 'Lato', sans-serif;
   font-family: 'Poppins', sans-serif;
 }
-
+a{
+  text-decoration: none;
+  color: black;
+}
 
 #box2{
   font-family: "Lato-Bold",Helvetica,Arial,sans-serif;
