--- a/brands/anniversary.css
+++ b/brands/anniversary.css
@@ -50,9 +50,12 @@
   gap:10px;
   padding:20px;
 }
-a{
+#linkPagesPath>a{
   text-decoration: none;
   color:black;
+}
+#linkPagesPath>a:hover{
+  color:white;
 }
 .item{
   display:flex;
